--- a/src/python/src/pyproject.toml
+++ b/src/python/src/pyproject.toml
@@ -9,6 +9,7 @@ python = "^3.9"
 mitmproxy = "^7.0.4"
 click = "^8.0.4"
 python-dotenv = "^0.19.2"
+SQLAlchemy = {extras = ["asyncio"], version = "^1.4.32"}
 
 [tool.poetry.dev-dependencies]
 
