feat(bbc): add statistic logging

--- a/src/python/src/.env.example
+++ b/src/python/src/.env.example
@@ -1,3 +1,22 @@
-DEFAULT_PROXY_HOST=
-DEFAULT_PROXY_PORT=
-DEFAULT_PROXY_CREDENTIALS=
+#DEFAULT_PROXY_HOST=
+#DEFAULT_PROXY_PORT=
+#DEFAULT_PROXY_CREDENTIALS=
+#DEFAULT_BANDWIDTH=
+#DEFAULT_THREADS=
+
+LISTEN_PORT=
+
+#SECRET_KEY=
+
+LOG_LEVEL=
+
+DB_DRIVER=
+DB_HOST=
+DB_PORT=
+DB_USERNAME=
+DB_PASSWORD=
+DB_DATABASE=
+
+SALT_KEY=
+
+#STATISTIC_LOGGING_TIME_TRIGGER=
