--- a/src/python/src/pyproject.toml
+++ b/src/python/src/pyproject.toml
@@ -11,6 +11,9 @@ click = "^8.0.4"
 python-dotenv = "^0.19.2"
 SQLAlchemy = {extras = ["asyncio"], version = "^1.4.32"}
 aiomysql = "^0.0.22"
+cryptocode = "^0.1"
+alembic = "^1.7.7"
+aiosqlite = "^0.17.0"
 
 [tool.poetry.dev-dependencies]
 
