feat(dependencies): upgrade mitmproxy 7.0.4->8.0.4

--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,8 @@
 .env
 /docker_persistent_data/*
 !/docker_persistent_data/.gitkeep
-/data/*
-!/data/.gitkeep
+/src/python/src/data/*
+!/src/python/src/data/.gitkeep
 node_modules/
 .env
 ecosystem.json
