--- a/.env.example
+++ b/.env.example
@@ -8,14 +8,14 @@ LISTEN_PORT=8081
 
 #SECRET_KEY=
 
-LOG_LEVEL=
+LOG_LEVEL=INFO
 
-DB_DRIVER=
-DB_HOST=
-DB_PORT=
-DB_USERNAME=
-DB_PASSWORD=
-DB_DATABASE=
+#DB_DRIVER=
+#DB_HOST=
+#DB_PORT=
+#DB_USERNAME=
+#DB_PASSWORD=
+#DB_DATABASE=
 
 SALT_KEY=
 
