feat(database): rework sqlite migrations and models

--- a/src/python/src/alembic.ini
+++ b/src/python/src/alembic.ini
@@ -1,5 +1,15 @@
 # A generic, single database configuration.
 
+[sqlite]
+script_location = database
+version_locations = database/versions/sqlite
+sqlalchemy.url = driver://user:pass@localhost/dbname
+
+[mysql]
+script_location = database
+version_locations = database/versions/mysql
+sqlalchemy.url = driver://user:pass@localhost/dbname
+
 [alembic]
 # path to migration scripts
 script_location = database
