--- a/src/python/src/pyproject.toml
+++ b/src/python/src/pyproject.toml
@@ -5,7 +5,7 @@ description = "Dep python proxy"
 authors = ["Nevoliashka <41319097+Nevoliashka@users.noreply.github.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = "^3.11"
 mitmproxy = "^9.0.0"
 click = "^8.0.4"
 python-dotenv = "^0.19.2"
@@ -14,9 +14,25 @@ aiomysql = "^0.0.22"
 cryptocode = "^0.1"
 alembic = "^1.9.0"
 aiosqlite = "^0.17.0"
+pytest = "^7.2.2"
+requests = "^2.28.2"
+
 
 [tool.poetry.dev-dependencies]
+
+
+[tool.poetry.group.tests.dependencies]
+playwright = "^1.32.1"
+pytest = "^7.2.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.pytest.ini_options]
+minversion = "7.0"
+addopts = "-ra -q"
+filterwarnings = [
+    "ignore::DeprecationWarning:twisted.web.http",
+    "ignore::DeprecationWarning:pkg_resources",
+]
